# kinova_j2s7s300_moveit2_config

./: CMakeLists.txt  README.md  package.xml
config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
config/fake_control/: controllers.yaml  j2s7s300_arm_controller.yaml  start_position.yaml
launch/: move_group_action_server.launch.py  move_group_fake_control.launch.py  rviz.rviz  rviz_interactive.rviz
srdf/: j2s7s300.srdf
