<?xml version="1.0"?>
<package format="3">
    <name>kinova_j2s7s300_moveit2_config</name>
    <version>1.0.0</version>
    <description>MoveIt2 configuration for Kinova Gen2 robot (j2s7s300)</description>
    <maintainer email="orsula.andrej@gmail.com">Andrej Orsula</maintainer>
    <author>Andrej Orsula</author>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
